...
            "value": "Angehängtes Bild"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Attached Image"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Imagen adjunta"
...
            "state": "translated",
            "value": "Función F de X"
          }
        }
      }
    },
    "Follow Up": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Nachfrage"
          }
...
            "value": "Nachrichteneingabefeld"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Message Input Textfield"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Campo de texto de entrada de mensaje"
...
            "value": "Nachricht einreihen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Queue Message"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Poner Mensaje en Cola"
...
            "value": "Nachricht senden"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send Message"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Enviar Mensaje"
...
            "value": "Bild teilen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share Image"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Compartir imagen"
...
            "value": "Wartende Nachrichten anzeigen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Show Queued Messages"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Mostrar Mensajes en Cola"
...
            "value": "Generierung stoppen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Stop Generating"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Detener la generación"
...
